		Item type: Throwing Dagger. Consumable? Should it work as a scroll, or as an arrow, etc.
	12118,Resist_Fire, //Resist Fire element, but opposite(incompatible) elements can give more damage
	12119,Resist_Cold, //Resist Water element, same as above
	12120,Resist_Earth //Resist Earth element, same as above
	12121,Resist_Thunder //Resist Wind element, same as above
	--

09/08
	* Fixed some songs/dances's target (changed it from "all  " to "all") [Skotlex]
	* Readded the mob skills NPC_RANDOMMOVE and NPC_SELFDESTRUCTION to the
	  Marine Sphere (which were lost on Komurka's last update to mob_skill_db)
	  [Skotlex]
	* Since the Lighthalzen mobs don't have accurate stats, but accurate
	  HP/Atk/Exp, their stats have been bumped to 75 all (and luk 99) to avoid
	  abusers until their correct stats can be figured out. [Skotlex]
	* Updated/corrected the header information of skill_db.txt
	* Reverted LoV and Storm Gust's range to 6 and 5 respectively as
	  empirically tested by Ishizu [Skotlex]
09/07
	* Added new flags to ground units: UF_NOPC, UF_NOMOB, adjusted accordingly
	  on song/dances that affect everyone except mobs. [Skotlex]
09/06
	* Changed in the skill_tree the mysterious value 4 that somehow slipped in
	  as a skillrequirement for WE_CALLBABY. [Skotlex]
	* Changed Magic Crasher and Pressure's nk to 0 [Skotlex]
	  NOTE: nk=2 is for splash damage skills and 1 for "no damage" skills. This
	  info is never sent to the client, so there's no reason we should deviate
	  from that convention.
	* Added effects to new items: [Lupus]
	  - #12107,Wrapped Mask: You get 1 random mask (Mr.Smile,Mr.Scream,Phantom Opera Mask,all set of Expressionless,Surprised,etc masks)
	  - #12106,Jewel Case: You get 1 random accessory (Ring,Clip,etc. Rogue's Treasure, Bow Timble, Fashion Hipsack. Excluding some overpowered and quests accessories)
	  - TEMP PLUG: #12111 Warpped Food: (You get 1 meat, 1 raw fish, 1 fruit)
	* Added new items, thanks to Landarma [Lupus]
09/04