@@ -860,10 +860,10 @@
 1141,Marina@NPC_CRITICALSLASH,attack,170,1,500,500,5000,no,target,always,0,,,,,,6
 1141,Marina@NPC_EMOTION,walk,197,1,200,0,5000,yes,self,always,0,19,,,,,
 1141,Marina@NPC_WATERATTACK,attack,184,2,500,500,5000,no,target,always,0,,,,,,6
-1142,Marine Sphere@NPC_RANDOMMOVE,idle,331,1,1000,0,30000,no,self,alchemist,,,,,,,
+1142,Marine Sphere@NPC_RANDOMMOVE,idle,331,1,10000,0,30000,no,self,alchemist,,,,,,,
 1142,Marine Sphere@NPC_SELFDESTRUCTION,idle,173,1,50,2000,5000,no,self,myhpltmaxrate,99,,,,,,
 1142,Marine Sphere@NPC_SELFDESTRUCTION,idle,173,1,10000,2000,5000,no,self,skillused,173,,,,,,
-1142,Marine Sphere@NPC_SELFDESTRUCTION,walk,173,1,1000,0,0,no,self,alchemist,,,,,,,
+1142,Marine Sphere@NPC_SELFDESTRUCTION,walk,173,1,10000,0,0,no,self,alchemist,,,,,,,
 1143,Marionette@HT_FREEZINGTRAP,idle,121,5,50,0,300000,yes,self,always,0,,,,,,29
 1143,Marionette@MG_FIREWALL,chase,18,5,500,500,5000,yes,target,always,0,,,,,,2
 1143,Marionette@NPC_TELEKINESISATTACK,attack,191,5,500,0,5000,yes,target,always,0,,,,,,6
